# quantum_mcp_server

./: .gitignore  Algoritmo di Shor.docx  README.md  generate_shor_qasm.py  pyproject.toml  readme_info.txt  shor_15_7.qasm  shor_21_11.qasm  shor_example.py  shor_period_intuition.html
src/qiskit_mcp_server/: main.py  qiskit_tools.py
